dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/rimloader.c)

AM_CONFIG_HEADER(include/config.h)

AM_INIT_AUTOMAKE(rimloader, 1.0)

AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(select)

CFLAGS="$CFLAGS -Wall -g"

AC_OUTPUT([
Makefile 
include/Makefile 
src/Makefile
])
