
noinst_LIBRARIES = librimsim_simul_rimos_core.a

librimsim_simul_rimos_core_a_SOURCES = \
	RimAlertNotify.c \
	RimCatastrophicFailure.c \
	RimCreateThread.c \
	RimDebugPrintf.c \
	RimDisableAppSwitch.c \
	RimEnableAppSwitch.c \
	RimFindTask.c \
	RimFree.c \
	RimGetAlarm.c \
	RimGetAlertConfiguration.c \
	RimGetCurrentTaskID.c \
	RimGetDateTime.c \
	RimGetDeviceInfo.c \
	RimGetForegroundApp.c \
	RimGetIdleTime.c \
	RimGetMessage.c \
	RimGetNumberOfTunes.c \
	RimGetPID.c \
	RimGetTicks.c \
	RimGetTuneName.c \
	RimInvokeTaskSwitcher.c \
	RimKillTimer.c \
	RimMalloc.c \
	RimMemoryRemaining.c \
	RimPeekMessage.c \
	RimPostMessage.c \
	RimRealloc.c \
	RimRegisterMessageCallback.c \
	RimReplyMessage.c \
	RimRequestForeground.c \
	RimSendMessage.c \
	RimSendSyncMessage.c \
	RimSetAlarmClock.c \
	RimSetAlertConfiguration.c \
	RimSetDate.c \
	RimSetLed.c \
	RimSetPID.c \
	RimSetReceiveFromDevice.c \
	RimSetTime.c \
	RimSetTimer.c \
	RimSleep.c \
	RimSpeakerBeep.c \
	RimSprintf.c \
	RimTaskYield.c \
	RimTerminateThread.c \
	RimTestAlert.c \
	RimToggleMessageReceiving.c \
	RimWaitForSpecificMessage.c

INCLUDES=-I$(top_srcdir)/include


