
noinst_LIBRARIES = librimsim_simul_rimos_lcd.a

librimsim_simul_rimos_lcd_a_SOURCES = \
	LcdClearDisplay.c \
	LcdClearToEndOfLine.c \
	LcdCopyBitmapToDisplay.c \
	LcdCreateDisplayContext.c \
	LcdDrawBox.c \
	LcdDrawLine.c \
	LcdGetCharacterWidth.c \
	LcdGetConfig.c \
	LcdGetContrast.c \
	LcdGetCurrentFont.c \
	LcdGetDisplayContext.c \
	LcdGetFontHeight.c \
	LcdIconsEnable.c \
	LcdPutStringXY.c \
	LcdRasterOp.c \
	LcdReplaceFont.c \
	LcdScroll.c \
	LcdSetContrast.c \
	LcdSetCurrentFont.c \
	LcdSetDisplayContext.c \
	LcdSetPixel.c \
	LcdSetTextWindow.c


INCLUDES=-I$(top_srcdir)/include


