
noinst_LIBRARIES = librimsim_simul_rimos_radio.a

librimsim_simul_rimos_radio_a_SOURCES = \
	RadioRegister.c \
	RadioDeregister.c \
	RadioOnOff.c \
	RadioGetDetailedInfo.c \
	RadioGetSignalLevel.c \
	RadioGetMpak.c \
	RadioSendMpak.c \
	RadioCancelSendMpak.c \
	RadioStopReception.c \
	RadioResumeReception.c \
	RadioRequestSkipnum.c \
	RadioAccelerateRetries.c \
	RadioGetAvailableNetworks.c \
	RadioChangeNetworks.c


INCLUDES=-I$(top_srcdir)/include


